@@ -1,0 +1,11 @@
+<metal:macro metal:define-macro="main">
+  <dl>
+    <tal:block repeat="field here/fgFields">
+      <tal:block tal:define="fname field/getName">
+        <dt tal:content="field/widget/label" />
+        <dd tal:content="python:request.form.get(fname, 'No Input')" />
+      </tal:block>
+    </tal:block>
+  </dl>
+
+</metal:macro>
