@@ -11,17 +11,8 @@
 
   <body>
     <metal:fill fill-slot="main">
-      <metal:main_macro>
-
-        <dl>
-          <tal:block repeat="field here/fgFields">
-            <tal:block tal:define="fname field/getName">
-              <dt tal:content="field/widget/label" />
-              <dd tal:content="python:request.form.get(fname, 'No Input')" />
-            </tal:block>
-          </tal:block>
-        </dl>
-
+      <metal:main_macro
+        use-macro="context/fg_result_embedded_view/macros/main">
       </metal:main_macro>
     </metal:fill>
   </body>
